fixed navbar going over scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   font-family: sans-serif;
+}
+
+.App {
   overflow-x: hidden;
 }
 
